Actions
Bug #12634
closedniumx: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointers:
../../sun4v/io/niumx/niumx.c: In function 'niumx_rem_intr': ../../sun4v/io/niumx/niumx.c:1178: error: comparison between pointer and integer
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1577b7ba682b7fdc8ef49b98f2147ec01b11e568
commit 1577b7ba682b7fdc8ef49b98f2147ec01b11e568 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T07:52:04.000Z 12634 niumx: NULL pointer errors Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions